8313368: (fc) FileChannel.size returns 0 on block special files